...
                    android:padding="5dp"
                    android:scrollbars="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/common_friends_title" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/more_info_buddymatch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_glow_pink"
                    android:paddingHorizontal="0dp"
                    android:paddingVertical="6dp"
                    android:text="About"
...
                    android:translationY="-80dp"
                    app:backgroundTint="@null"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/match_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btnglowpurple"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="6dp"
                    android:text="@string/match"
...
