...
        android:padding="8dp"
        android:paddingBottom="20dp"
        android:translationZ="-1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/more_info_image"
        app:layout_constraintVertical_bias="0.0">-->

    <TextView
        android:id="@+id/about_info_more_info"
        android:layout_width="326dp"
        android:layout_height="300dp"
...
